fix(modal of new project): Arregle el bug que se mueve los elementos por el espacio del scrollbar

--- a/public/css/explore.css
+++ b/public/css/explore.css
@@ -54,7 +54,6 @@ body {
     -webkit-font-smoothing: antialiased;
     font-size: 15px;
     line-height: 1.5;
-    scrollbar-gutter: stable;
 }
 
 /* ─────────────────────────────────────────────────
